--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
                         <div id="project-pics" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active" data-interval="2000">
-                                    <img src="/img/pic1.jpg" class="d-block w-100 rounded" alt="pic1">
+                                    <img src="/img/pic1.jpg" class="d-block w-100 carousel-img rounded" alt="pic1">
                                 </div>
                                 <div class="carousel-item" data-interval="2000">
-                                    <img src="/img/pic2.jpg" class="d-block w-100 rounded" alt="pic2">
+                                    <img src="/img/pic2.jpg" class="d-block w-100 carousel-img rounded" alt="pic2">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="/img/pic3.jpg" class="d-block w-100 rounded" alt="pic3">
+                                    <img src="/img/pic3.jpg" class="d-block w-100 carousel-img rounded" alt="pic3">
                                 </div>
                             </div>
                         </div>
@@ -90,73 +90,7 @@
                     <img src="img/pic9.jpg"  class="img-fluid gallery-img"alt="">
                     <img src="img/pic10.jpg" class="img-fluid gallery-img" alt="">
                 </div> -->
-                <!-- Root element of PhotoSwipe. Must have class pswp. -->
-                <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
-
-                    <!-- Background of PhotoSwipe. 
-         It's a separate element as animating opacity is faster than rgba(). -->
-                    <div class="pswp__bg"></div>
-
-                    <!-- Slides wrapper with overflow:hidden. -->
-                    <div class="pswp__scroll-wrap">
-
-                        <!-- Container that holds slides. 
-            PhotoSwipe keeps only 3 of them in the DOM to save memory.
-            Don't modify these 3 pswp__item elements, data is added later on. -->
-                        <div class="pswp__container">
-                            <div class="pswp__item"></div>
-                            <div class="pswp__item"></div>
-                            <div class="pswp__item"></div>
-                        </div>
-
-                        <!-- Default (PhotoSwipeUI_Default) interface on top of sliding area. Can be changed. -->
-                        <div class="pswp__ui pswp__ui--hidden">
-
-                            <div class="pswp__top-bar">
-
-                                <!--  Controls are self-explanatory. Order can be changed. -->
-
-                                <div class="pswp__counter"></div>
-
-                                <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
-
-                                <button class="pswp__button pswp__button--share" title="Share"></button>
-
-                                <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
-
-                                <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
-
-                                <!-- Preloader demo https://codepen.io/dimsemenov/pen/yyBWoR -->
-                                <!-- element will get class pswp__preloader--active when preloader is running -->
-                                <div class="pswp__preloader">
-                                    <div class="pswp__preloader__icn">
-                                        <div class="pswp__preloader__cut">
-                                            <div class="pswp__preloader__donut"></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
-                                <div class="pswp__share-tooltip"></div>
-                            </div>
-
-                            <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
-                            </button>
-
-                            <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
-                            </button>
-
-                            <div class="pswp__caption">
-                                <div class="pswp__caption__center"></div>
-                            </div>
-
-                        </div>
-
-                    </div>
-
-                </div>
-            </div>
+               
         </section>
 
         <div class="footer">
