--- a/test.html
+++ b/test.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="/lib/photoswipe/css/photoswipe.css">
     <link rel="stylesheet" href="/lib/default-skin/default-skin.css">
     <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Empire</title>
 </head>
 
@@ -133,41 +134,7 @@
             </div>
         </div>
 
-        <!-- <h2>Second gallery:</h2>
-
-        <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
-
-
-
-            <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                <a href="https://farm2.staticflickr.com/1043/5186867718_06b2e9e551_b.jpg" itemprop="contentUrl"
-                    data-size="964x1024">
-                    <img src="https://farm2.staticflickr.com/1043/5186867718_06b2e9e551_m.jpg" itemprop="thumbnail"
-                        alt="Image description" />
-                </a>
-                <figcaption itemprop="caption description">Image caption 2.1</figcaption>
-            </figure>
-
-            <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                <a href="https://farm7.staticflickr.com/6175/6176698785_7dee72237e_b.jpg" itemprop="contentUrl"
-                    data-size="1024x683">
-                    <img src="https://farm7.staticflickr.com/6175/6176698785_7dee72237e_m.jpg" itemprop="thumbnail"
-                        alt="Image description" />
-                </a>
-                <figcaption itemprop="caption description">Image caption 2.2</figcaption>
-            </figure>
-
-            <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                <a href="https://farm6.staticflickr.com/5023/5578283926_822e5e5791_b.jpg" itemprop="contentUrl"
-                    data-size="1024x768">
-                    <img src="https://farm6.staticflickr.com/5023/5578283926_822e5e5791_m.jpg" itemprop="thumbnail"
-                        alt="Image description" />
-                </a>
-                <figcaption itemprop="caption description">Image caption 2.3</figcaption>
-            </figure>
-
-
-        </div> -->
+       
 
 
 
@@ -206,7 +173,6 @@
 
                         <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
 
-                        <!-- Preloader demo https://codepen.io/dimsemenov/pen/yyBWoR -->
                         <!-- element will get class pswp__preloader--active when preloader is running -->
                         <div class="pswp__preloader">
                             <div class="pswp__preloader__icn">
@@ -278,7 +244,7 @@
         <script src="/lib/photoswipe/js/photoswipe-ui-default.min.js"></script>
 
 
-        <script src="test.js"></script>
+        <!-- <script src="test.js"></script> -->
         <script src="https://unpkg.com/colcade@0/colcade.js"></script>
         <script>
             var colc = new Colcade('.grid', {
