--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="/lib/photoswipe/css/photoswipe.css">
     <link rel="stylesheet" href="/lib/default-skin/default-skin.css">
     <link rel="stylesheet" href="/css/style.css">
@@ -62,7 +64,7 @@
                     </div>
                     <div class="col-lg-5">
                         <div class="title align-self-center">
-                            <h1>Come check out our projects!</h1>
+                            <h1 data-aos="fade-up" data-aos-offset="300">Come check out our projects!</h1>
                             <p>Click here to check out all of our projects!</p>
                             <a href="#" class="btn"><i
                                     class="fas fa-angle-double-right hvr-icon-wobble-horizontal"></i></a>
@@ -72,95 +74,191 @@
             </div>
         </section>
         <section class="gallery">
-
             <div class="gallery-title d-flex flex-column align-items-center">
                 <h1>Gallery</h1>
             </div>
-
             <div class="container">
-                <!-- <div class="grid">
-                    <img src="img/pic1.jpg" class="img-fluid gallery-img" alt="">
-                    <img src="img/pic2.jpg" class="img-fluid gallery-img" alt="">
-                    <img src="img/pic3.jpg" class="img-fluid gallery-img" alt="">
-                    <img src="img/pic4.jpg" class="img-fluid gallery-img" alt="">
-                    <img src="img/pic5.jpg" class="img-fluid gallery-img" alt="">
-                    <img src="img/pic6.jpg" class="img-fluid gallery-img" alt="">
-                    <img src="img/pic7.jpg" class="img-fluid gallery-img" alt="">
-                    <img src="img/pic8.jpg" class="img-fluid gallery-img" alt="">
-                    <img src="img/pic9.jpg"  class="img-fluid gallery-img"alt="">
-                    <img src="img/pic10.jpg" class="img-fluid gallery-img" alt="">
-                </div> -->
-                <!-- Root element of PhotoSwipe. Must have class pswp. -->
-                <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
+                <div class="grid my-gallery" itemscope itemtype="http://schema.org/ImageGallery" data-aos="fade-up" data-aos-offset="300" data-aos-delay="50" data-aos-easing="ease-in-out">
+                    <div class="grid-col grid-col--1">
 
-                    <!-- Background of PhotoSwipe. 
-         It's a separate element as animating opacity is faster than rgba(). -->
-                    <div class="pswp__bg"></div>
+                    </div>
+                    <div class="grid-col grid-col--2">
 
-                    <!-- Slides wrapper with overflow:hidden. -->
-                    <div class="pswp__scroll-wrap">
+                    </div>
+                    <div class="grid-col grid-col--3">
 
-                        <!-- Container that holds slides. 
-            PhotoSwipe keeps only 3 of them in the DOM to save memory.
-            Don't modify these 3 pswp__item elements, data is added later on. -->
-                        <div class="pswp__container">
-                            <div class="pswp__item"></div>
-                            <div class="pswp__item"></div>
-                            <div class="pswp__item"></div>
-                        </div>
+                    </div>
 
-                        <!-- Default (PhotoSwipeUI_Default) interface on top of sliding area. Can be changed. -->
-                        <div class="pswp__ui pswp__ui--hidden">
+                    <div class="grid-item">
+                        <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="img/pic1.jpg" itemprop="contentUrl" data-size="964x1024">
+                                <img src="img/pic1.jpg" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                        </figure>
+                    </div>
+                    <div class="grid-item">
+                        <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="img/pic2.jpg" itemprop="contentUrl" data-size="964x1024">
+                                <img src="img/pic2.jpg" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                        </figure>
+                    </div>
+                    <div class="grid-item">
+                        <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="img/pic3.jpg" itemprop="contentUrl" data-size="964x1024">
+                                <img src="img/pic3.jpg" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                        </figure>
+                    </div>
+                    <div class="grid-item">
+                        <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="img/pic4.jpg" itemprop="contentUrl" data-size="964x1024">
+                                <img src="img/pic4.jpg" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                        </figure>
+                    </div>
+                    <div class="grid-item">
+                        <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="img/pic5.jpg" itemprop="contentUrl" data-size="964x1024">
+                                <img src="img/pic5.jpg" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                        </figure>
+                    </div>
+                    <div class="grid-item">
+                        <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="img/pic6.jpg" itemprop="contentUrl" data-size="964x1024">
+                                <img src="img/pic6.jpg" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                        </figure>
+                    </div>
+                    <div class="grid-item">
+                        <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="img/pic7.jpg" itemprop="contentUrl" data-size="964x1024">
+                                <img src="img/pic7.jpg" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                        </figure>
+                    </div>
+                    <div class="grid-item">
+                        <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="img/pic8.jpg" itemprop="contentUrl" data-size="964x1024">
+                                <img src="img/pic8.jpg" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                        </figure>
+                    </div>
+                    <div class="grid-item">
+                        <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="img/pic9.jpg" itemprop="contentUrl" data-size="964x1024">
+                                <img src="img/pic9.jpg" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                        </figure>
+                    </div>
+                    <div class="grid-item">
+                        <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="img/pic10.jpg" itemprop="contentUrl" data-size="964x1024">
+                                <img src="img/pic10.jpg" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                        </figure>
+                    </div>
 
-                            <div class="pswp__top-bar">
+                </div>
+            </div>
 
-                                <!--  Controls are self-explanatory. Order can be changed. -->
 
-                                <div class="pswp__counter"></div>
 
-                                <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
 
-                                <button class="pswp__button pswp__button--share" title="Share"></button>
 
-                                <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
+            <!-- Root element of PhotoSwipe. Must have class pswp. -->
+            <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
 
-                                <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
+                <!-- Background of PhotoSwipe. 
+                       It's a separate element, as animating opacity is faster than rgba(). -->
+                <div class="pswp__bg"></div>
 
-                                <!-- Preloader demo https://codepen.io/dimsemenov/pen/yyBWoR -->
-                                <!-- element will get class pswp__preloader--active when preloader is running -->
-                                <div class="pswp__preloader">
-                                    <div class="pswp__preloader__icn">
-                                        <div class="pswp__preloader__cut">
-                                            <div class="pswp__preloader__donut"></div>
-                                        </div>
+                <!-- Slides wrapper with overflow:hidden. -->
+                <div class="pswp__scroll-wrap">
+
+                    <!-- Container that holds slides. PhotoSwipe keeps only 3 slides in DOM to save memory. -->
+                    <!-- don't modify these 3 pswp__item elements, data is added later on. -->
+                    <div class="pswp__container">
+                        <div class="pswp__item"></div>
+                        <div class="pswp__item"></div>
+                        <div class="pswp__item"></div>
+                    </div>
+
+                    <!-- Default (PhotoSwipeUI_Default) interface on top of sliding area. Can be changed. -->
+                    <div class="pswp__ui pswp__ui--hidden">
+
+                        <div class="pswp__top-bar">
+
+                            <!--  Controls are self-explanatory. Order can be changed. -->
+
+                            <div class="pswp__counter"></div>
+
+                            <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
+
+                            <button class="pswp__button pswp__button--share" title="Share"></button>
+
+                            <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
+
+                            <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
+
+                            <!-- element will get class pswp__preloader--active when preloader is running -->
+                            <div class="pswp__preloader">
+                                <div class="pswp__preloader__icn">
+                                    <div class="pswp__preloader__cut">
+                                        <div class="pswp__preloader__donut"></div>
                                     </div>
                                 </div>
                             </div>
+                        </div>
 
-                            <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
-                                <div class="pswp__share-tooltip"></div>
-                            </div>
+                        <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
+                            <div class="pswp__share-tooltip"></div>
+                        </div>
 
-                            <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
-                            </button>
+                        <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
+                        </button>
 
-                            <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
-                            </button>
+                        <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
+                        </button>
 
-                            <div class="pswp__caption">
-                                <div class="pswp__caption__center"></div>
-                            </div>
-
+                        <div class="pswp__caption">
+                            <div class="pswp__caption__center"></div>
                         </div>
 
                     </div>
 
                 </div>
+
             </div>
+
+
         </section>
 
         <div class="footer">
-
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <h2>Empire Construction</h2>
+                    </div>
+                    <div class="col-lg-4">
+                        <h3>Menu</h3>
+                        <ul>
+                            <li><a href="portfolio.html">Portfolio</a></li>
+                            <li><a href="aboutus.html">About us</a></li>
+                            <li><a href="contactus.html">Contact us</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-4">
+                        <h3>Contact us</h3>
+                        <ul>
+                            <li><i class="fas fa-at"></i> email_address@email.com</li>
+                            <li><i class="fas fa-phone-volume"></i> 1(246) 124-9876</li>
+                            <li></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
 
 
@@ -219,38 +317,17 @@
         </script>
         <script src="/lib/photoswipe/js/photoswipe.min.js"></script>
         <script src="/lib/photoswipe/js/photoswipe-ui-default.min.js"></script>
-        <script>
-            var pswpElement = document.querySelectorAll('.pswp')[0];
-
-            // build items array
-            var items = [
-                {
-                    src: 'https://placekitten.com/600/400',
-                    w: 600,
-                    h: 400
-                },
-                {
-                    src: 'https://placekitten.com/1200/900',
-                    w: 1200,
-                    h: 900
-                }
-            ];
-
-            // define options (if needed)
-            var options = {
-                // optionName: 'option value'
-                // for example:
-                index: 0 // start at first slide
-            };
-
-            // Initializes and opens PhotoSwipe
-            var gallery = new PhotoSwipe(pswpElement, PhotoSwipeUI_Default, items, options);
-            gallery.init();
-
-
-        </script>
-
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script src="js/app.js"></script>
+        <script src="https://unpkg.com/colcade@0/colcade.js"></script>
+        <script>
+            var colc = new Colcade('.grid', {
+                columns: '.grid-col',
+                items: '.grid-item'
+            });
+
+            AOS.init();
+        </script>
 
 
 
