--- a/Portfolio.html
+++ b/Portfolio.html
@@ -90,7 +90,8 @@
                 <h1 class="projects-header">Our Projects</h1>                
             </div>
             <hr class="line">
-            <div class="row">
+            <div class="project-list">
+              <div class="row">
                 <div class="col-lg-6">
                     <h1>Lorem ipsum dolor sit.</h1>
                 </div>
@@ -174,8 +175,8 @@
                       </div>
                 </div>
             </div>
-
-            
+            </div>   
+          </div>                    
 
           </div>
         </section>
