--- a/aboutus.html
+++ b/aboutus.html
@@ -45,6 +45,7 @@
             </div>
         </nav>
         <div class="about-banner"></div>
+        <div class="container"></div>
         <section class="about-section">
             <div class="container">
                 <div class="d-flex flex-column align-items-center">
@@ -72,6 +73,36 @@
                             laudantium explicabo sit?</p>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="leadership">
+            <div class="container">
+                <h1>Meet our Leadership</h1>
+                <hr>
+                <!-- <div class="d-flex flex-column align-items-center"> -->
+                    <div class="card-deck">
+                    <div class="card shadow-lg rounded mb-5 mt-3" style="width: 18rem;">
+                        <img src="img/boss.jpg" class="card-img-top profile" alt="leader">
+                        <div class="card-body">
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+                                quaerat
+                                est, obcaecati reiciendis, voluptatum nesciunt aliquam similique minus quas rerum,
+                                fugiat
+                                blanditiis maxime.</p>
+                        </div>
+                    </div>
+                    <div class="card shadow-lg rounded mb-5 mt-3" style="width: 18rem;">
+                        <img src="img/boss.jpg" class="card-img-top profile" alt="leader">
+                        <div class="card-body">
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+                                quaerat
+                                est, obcaecati reiciendis, voluptatum nesciunt aliquam similique minus quas rerum,
+                                fugiat
+                                blanditiis maxime.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- </div> -->
             </div>
         </section>
 
