updates to site

--- a/aboutus.html
+++ b/aboutus.html
@@ -28,7 +28,7 @@
         <nav class="navigation">
             <div class="content">
                 <div class="logo">
-                    <a href="index.html">Empire</a>
+                    <a href="index.html"><img src="img/empire_logo.png" class="img-thumbnail empire-logo"></a>
                 </div>
                 <ul class="menu-list">
                     <div class="icon cancel-btn">
@@ -53,9 +53,9 @@
                 </div>
                 <hr class="line">
 
-                <div class="row">
+                <div class="row" data-aos="fade-up" data-aos-offset="300">
                     <div class="col-lg-4">
-                        About Empire (logo)
+                        <img class="about-logo" src="img/empire_logo black.svg" alt="">
                     </div>
                     <div class="col-lg-8">
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate odit consequatur illo
@@ -81,7 +81,7 @@
                 <hr>
                 <!-- <div class="d-flex flex-column align-items-center"> -->
                     <div class="card-deck">
-                    <div class="card shadow-lg rounded mb-5 mt-3" style="width: 18rem;">
+                    <div class="card shadow-lg rounded mb-5 mt-3" style="width: 18rem;" data-aos="fade-right" data-aos-offset="300">
                         <img src="img/boss.jpg" class="card-img-top profile" alt="leader">
                         <div class="card-body">
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
@@ -91,7 +91,7 @@
                                 blanditiis maxime.</p>
                         </div>
                     </div>
-                    <div class="card shadow-lg rounded mb-5 mt-3" style="width: 18rem;">
+                    <div class="card shadow-lg rounded mb-5 mt-3" style="width: 18rem;" data-aos="fade-left" data-aos-offset="300">
                         <img src="img/boss.jpg" class="card-img-top profile" alt="leader">
                         <div class="card-body">
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
@@ -108,31 +108,32 @@
 
 
 
-        <footer class="footer">
+        <div class="footer">
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-4">
-                        <h2>Empire Construction</h2>
-                    </div>
-                    <div class="col-lg-4">
+                <div class="row">                    
+                    <div class="col-4">
                         <h3>Menu</h3>
-                        <ul>
+                        <ul class="footer-links">
                             <li><a href="portfolio.html">Portfolio</a></li>
                             <li><a href="aboutus.html">About us</a></li>
                             <li><a href="contactus.html">Contact us</a></li>
                         </ul>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-4">
                         <h3>Contact us</h3>
-                        <ul>
+                        <ul class="footer-links">
                             <li><i class="fas fa-at"></i> email_address@email.com</li>
                             <li><i class="fas fa-phone-volume"></i> 1(246) 124-9876</li>
-                            <li></li>
+                            <li><a href="#"><i class="fab fa-instagram"></i></a> <a href="#"><i
+                                        class="fab fa-facebook-square"></i></a></li>
                         </ul>
+                    </div>
+                    <div class="col-4">
+                        <img src="img/empire_logo white.svg" class="footer-icon mt-auto p-2 bd-highlight" alt="">
                     </div>
                 </div>
             </div>
-        </footer>
+        </div>
 
 
 
