--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
+    <link rel="stylesheet" href="/node_modules/aos/dist/aos.css">
     <link rel="stylesheet" href="/lib/photoswipe/css/photoswipe.css">
     <link rel="stylesheet" href="/lib/default-skin/default-skin.css">
     <link rel="stylesheet" href="/css/style.css">
@@ -27,7 +28,7 @@
         <nav class="navigation">
             <div class="content">
                 <div class="logo">
-                    <a href="index.html">Empire</a>
+                    <a href="index.html"><img src="img/empire_logo.png" class="img-thumbnail empire-logo"></a>
                 </div>
                 <ul class="menu-list">
                     <div class="icon cancel-btn">
@@ -63,8 +64,8 @@
                         </div>
                     </div>
                     <div class="col-lg-5">
-                        <div class="title align-self-center">
-                            <h1 data-aos="fade-up" data-aos-offset="300">Come check out our projects!</h1>
+                        <div class="title align-self-center" data-aos="fade-up" data-aos-offset="300">
+                            <h1>Come check out our projects!</h1>
                             <p>Click here to check out all of our projects!</p>
                             <a href="#" class="btn"><i
                                     class="fas fa-angle-double-right hvr-icon-wobble-horizontal"></i></a>
@@ -76,9 +77,11 @@
         <section class="gallery">
             <div class="gallery-title d-flex flex-column align-items-center">
                 <h1>Gallery</h1>
+
             </div>
             <div class="container">
-                <div class="grid my-gallery" itemscope itemtype="http://schema.org/ImageGallery" data-aos="fade-up" data-aos-offset="300" data-aos-delay="50" data-aos-easing="ease-in-out">
+                <div class="grid my-gallery" itemscope itemtype="http://schema.org/ImageGallery" data-aos="fade-up"
+                    data-aos-offset="300" data-aos-delay="50" data-aos-easing="ease-in-out">
                     <div class="grid-col grid-col--1">
 
                     </div>
@@ -237,25 +240,26 @@
 
         <div class="footer">
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-4">
-                        <h2>Empire Construction</h2>
-                    </div>
-                    <div class="col-lg-4">
+                <div class="row">                    
+                    <div class="col-4">
                         <h3>Menu</h3>
-                        <ul>
+                        <ul class="footer-links">
                             <li><a href="portfolio.html">Portfolio</a></li>
                             <li><a href="aboutus.html">About us</a></li>
                             <li><a href="contactus.html">Contact us</a></li>
                         </ul>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-4">
                         <h3>Contact us</h3>
-                        <ul>
+                        <ul class="footer-links">
                             <li><i class="fas fa-at"></i> email_address@email.com</li>
                             <li><i class="fas fa-phone-volume"></i> 1(246) 124-9876</li>
-                            <li></li>
+                            <li><a href="#"><i class="fab fa-instagram"></i></a> <a href="#"><i
+                                        class="fab fa-facebook-square"></i></a></li>
                         </ul>
+                    </div>
+                    <div class="col-4">
+                        <img src="img/empire_logo white.svg" class="footer-icon mt-auto p-2 bd-highlight" alt="">
                     </div>
                 </div>
             </div>
@@ -317,7 +321,8 @@
         </script>
         <script src="/lib/photoswipe/js/photoswipe.min.js"></script>
         <script src="/lib/photoswipe/js/photoswipe-ui-default.min.js"></script>
-        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
+        <script src="/node_modules/aos/dist/aos.js"></script>
         <script src="js/app.js"></script>
         <script src="https://unpkg.com/colcade@0/colcade.js"></script>
         <script>
@@ -326,10 +331,8 @@
                 items: '.grid-item'
             });
 
-            AOS.init();
+            // AOS.init();
         </script>
-
-
 
 
 
