Main pages updated

--- a/aboutus.html
+++ b/aboutus.html
@@ -2,198 +2,198 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Poppins:300" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-        integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
-        crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="/lib/photoswipe/css/photoswipe.css">
-    <link rel="stylesheet" href="/lib/default-skin/default-skin.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/about.css">
-    <title>Empire</title>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Poppins:300" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+    integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+    crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="/lib/photoswipe/css/photoswipe.css">
+  <link rel="stylesheet" href="/lib/default-skin/default-skin.css">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/about.css">
+  <title>Empire</title>
 </head>
 
 <body>
 
-    <body>
-        <nav class="navigation">
-            <div class="content">
-                <div class="logo">
-                    <a href="index.html"><img src="img/empire_logo.png" class="img-thumbnail empire-logo"></a>
-                </div>
-                <ul class="menu-list">
-                    <div class="icon cancel-btn">
-                        <i class="fas fa-times"></i>
-                    </div>
-                    <li><a href="Portfolio.html">Portfolio</a></li>
-                    <li><a href="aboutus.html">About us</a></li>
-                    <li><a href="contactus.html">Contact us</a></li>
-                    <li class="social"><a href="#"><i class="fab fa-instagram"></i></a></li>
-                </ul>
-                <div class="icon menu-btn">
-                    <i class="fas fa-bars"></i>
-                </div>
-            </div>
-        </nav>
-        <div class="about-banner"></div>
-        <div class="container"></div>
-        <section class="about-section">
-            <div class="container">
-                <div class="d-flex flex-column align-items-center">
-                    <h1 class="projects-header">About us</h1>
-                </div>
-                <hr class="line">
-
-                <div class="row" data-aos="fade-up" data-aos-offset="300">
-                    <div class="col-lg-4">
-                        <img class="about-logo" src="img/empire_logo black.svg" alt="">
-                    </div>
-                    <div class="col-lg-8">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate odit consequatur illo
-                            impedit aperiam accusantium doloremque ducimus ad facere nisi dolor aliquid ea nihil, ullam
-                            aut
-                            mollitia deserunt? At fugiat maxime aperiam, sint in asperiores qui labore accusamus,
-                            praesentium iste eligendi vero culpa laudantium velit dignissimos rerum omnis officia. Iure
-                            ipsum eum, rerum explicabo delectus, voluptatum laborum mollitia eveniet earum vel aliquid!
-                            Soluta repellat quaerat aut veritatis quis eius dolore eveniet voluptatibus. Labore
-                            aspernatur
-                            earum aperiam totam eos inventore perspiciatis.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam numquam expedita impedit
-                            doloribus odio soluta quidem, fugiat excepturi natus. Ad nihil, sequi quo illum, nisi omnis
-                            inventore incidunt delectus vel rerum repudiandae laborum iusto! Inventore harum eaque
-                            laudantium explicabo sit?</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="leadership">
-            <div class="container">
-                <h1>Meet our Leadership</h1>
-                <hr>
-                <!-- <div class="d-flex flex-column align-items-center"> -->
-                    <div class="card-deck">
-                    <div class="card shadow-lg rounded mb-5 mt-3" style="width: 18rem;" data-aos="fade-right" data-aos-offset="300">
-                        <img src="img/boss.jpg" class="card-img-top profile" alt="leader">
-                        <div class="card-body">
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-                                quaerat
-                                est, obcaecati reiciendis, voluptatum nesciunt aliquam similique minus quas rerum,
-                                fugiat
-                                blanditiis maxime.</p>
-                        </div>
-                    </div>
-                    <div class="card shadow-lg rounded mb-5 mt-3" style="width: 18rem;" data-aos="fade-left" data-aos-offset="300">
-                        <img src="img/boss.jpg" class="card-img-top profile" alt="leader">
-                        <div class="card-body">
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-                                quaerat
-                                est, obcaecati reiciendis, voluptatum nesciunt aliquam similique minus quas rerum,
-                                fugiat
-                                blanditiis maxime.</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- </div> -->
-            </div>
-        </section>
+  <body>
+    <nav class="navigation">
+      <div class="content">
+        <div class="logo">
+          <a href="index.html"><img src="img/empire_logo white.svg" class="empire-logo" alt="Logo"></a>
+        </div>
+        <ul class="menu-list">
+          <div class="icon cancel-btn">
+            <i class="fas fa-times"></i>
+          </div>
+          <li><a href="index.html" class="underline">Home</a></li>
+          <li><a href="Portfolio.html" class="underline">Portfolio</a></li>
+          <li><a href="aboutus.html" class="underline active">About us</a></li>
+          <li><a href="contactus.html" class="underline">Contact us</a></li>
+          <li class="social"><a href="https://www.instagram.com/empire_bc246/"><i class="fab fa-instagram"></i></a></li>
+          <li class="social"><a href="https://www.facebook.com/empirebuildingandcontruction246"><i
+                class="fab fa-facebook-square"></i></a></li>
+        </ul>
+        <div class="icon menu-btn">
+          <i class="fas fa-bars"></i>
+        </div>
+      </div>
+    </nav>
+    <div class="about-banner">
+      <div class="container img-text">
+        <h1 class="abt-title pt-5">About us</h1>
+        <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod voluptatibus ut id
+          corrupti molestias.</p>
+      </div>
+    </div>
 
 
+    <section class="about-section">
+      <div class="container">
+        <div class="row my-2" data-aos="fade-up" data-aos-offset="300">
+          <div class="col-lg-4">
+            <img class="about-logo mb-2" src="img/empire_logo black.svg" alt="">
+          </div>
+          <div class="col-lg-8">
+            <p>Empire Building & Construction was established in 2014 and operates from #17 Sheraton Park, Christ
+              Church. The company has been the pioneering force behind the creation of dream spaces for individuals and
+              corporate companies throughout the island. It has grown from strength to strength and has successfully
+              completed more than (100) projects in the residential and commercial sector. Some of the services we offer
+              include project management, architectural drawings, engineering, carpentry, masonry, steel bending,
+              tiling, painting, plumbing, electrical installation, air conditioning and excavation.</p>
+            <p>Empire is equipped with the requisite expertise and wide-ranging experience to undertake construction
+              projects with sourced responsibility. Projects are executed using state of the art designs, tools and
+              project management techniques from concept to commissioning. We intend to be a one stop solution for all
+              your construction needs. We deliver all projects in the committed time with the utmost care and
+              consideration for quality. Every client is our asset and customer satisfaction is our main priority.</p>
+            <p>We envision a future where Empire Building & Construction is a household name and future, whereas our
+              brand symbolizes superior community living of the highest standards of quality and customer delight. </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="leadership">
+      <div class="container">
+        <h1 class="pb-4">Meet our Leadership</h1>
+        <hr>
 
-        <div class="footer">
-            <div class="container">
-                <div class="row">                    
-                    <div class="col-4">
-                        <h3>Menu</h3>
-                        <ul class="footer-links">
-                            <li><a href="portfolio.html">Portfolio</a></li>
-                            <li><a href="aboutus.html">About us</a></li>
-                            <li><a href="contactus.html">Contact us</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-4">
-                        <h3>Contact us</h3>
-                        <ul class="footer-links">
-                            <li><i class="fas fa-at"></i> email_address@email.com</li>
-                            <li><i class="fas fa-phone-volume"></i> 1(246) 124-9876</li>
-                            <li><a href="#"><i class="fab fa-instagram"></i></a> <a href="#"><i
-                                        class="fab fa-facebook-square"></i></a></li>
-                        </ul>
-                    </div>
-                    <div class="col-4">
-                        <img src="img/empire_logo white.svg" class="footer-icon mt-auto p-2 bd-highlight" alt="">
-                    </div>
-                </div>
-            </div>
+        <div class="card shadow-lg rounded mb-5 mt-3 mx-auto" style="width: 18rem;" data-aos="fade-right"
+          data-aos-offset="300">
+          <img src="img/boss.jpg" class="card-img-top profile" alt="leader">
+          <div class="card-body">
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+              quaerat
+              est, obcaecati reiciendis, voluptatum nesciunt aliquam similique minus quas rerum,
+              fugiat
+              blanditiis maxime.</p>
+          </div>
         </div>
 
 
+      </div>
+    </section>
+
+
+
+    <div class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-4">
+            <h3 class="mb-4" style="text-decoration: underline;">Menu</h3>
+            <ul class="footer-links">
+              <li><a href="portfolio.html" class="underline">Portfolio</a></li>
+              <li><a href="aboutus.html" class="underline">About us</a></li>
+              <li><a href="contactus.html" class="underline">Contact us</a></li>
+            </ul>
+          </div>
+          <div class="col-4">
+            <h3 class="mb-4" style="text-decoration: underline;">Contact us</h3>
+            <ul class="footer-links">
+              <li><i class="fas fa-at"></i> Empirebuildingconstruction@gmail.com</li>
+              <li><i class="fas fa-phone-volume"></i> 1(246)264-1419 </li>
+              <div class="footer-social">
+                <li><a href="https://www.instagram.com/empire_bc246/"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://www.facebook.com/empirebuildingandcontruction246"><i
+                      class="fab fa-facebook-square"></i></a></li>
+              </div>
+
+            </ul>
+          </div>
+          <div class="col-4">
+            <img src="img/empire_logo white.svg" class="footer-icon float-right" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
 
 
 
 
 
-        <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-            integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-            crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"
-            integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ=="
-            crossorigin="anonymous"></script>
-        <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"
-            integrity="sha512-F5QTlBqZlvuBEs9LQPqc1iZv2UMxcVXezbHzomzS6Df4MZMClge/8+gXrKw2fl5ysdk4rWjR0vKS7NNkfymaBQ=="
-            crossorigin="anonymous"></script>
-        <script>
-            const body = document.querySelector("body");
-            const navbar = document.querySelector(".navigation");
-            const menuBtn = document.querySelector(".menu-btn");
-            const cancelBtn = document.querySelector(".cancel-btn");
-            menuBtn.onclick = () => {
-                navbar.classList.add("show");
-                menuBtn.classList.add("hide");
-                body.classList.add("disabled");
-            }
-            cancelBtn.onclick = () => {
-                body.classList.remove("disabled");
-                navbar.classList.remove("show");
-                menuBtn.classList.remove("hide");
-            }
-            window.onscroll = () => {
-                this.scrollY > 20 ? navbar.classList.add("sticky") : navbar.classList.remove("sticky");
-            }
-
-
-        </script>
-        <script src="/lib/photoswipe/js/photoswipe.min.js"></script>
-        <script src="/lib/photoswipe/js/photoswipe-ui-default.min.js"></script>
-        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-        <script src="js/app.js"></script>
-        <script src="https://unpkg.com/colcade@0/colcade.js"></script>
-        <script>
-            var colc = new Colcade('.grid', {
-                columns: '.grid-col',
-                items: '.grid-item'
-            });
-
-            AOS.init();
-        </script>
 
 
 
+    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+      integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+      crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"
+      integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ=="
+      crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"
+      integrity="sha512-F5QTlBqZlvuBEs9LQPqc1iZv2UMxcVXezbHzomzS6Df4MZMClge/8+gXrKw2fl5ysdk4rWjR0vKS7NNkfymaBQ=="
+      crossorigin="anonymous"></script>
+    <script>
+      const body = document.querySelector("body");
+      const navbar = document.querySelector(".navigation");
+      const menuBtn = document.querySelector(".menu-btn");
+      const cancelBtn = document.querySelector(".cancel-btn");
+      menuBtn.onclick = () => {
+        navbar.classList.add("show");
+        menuBtn.classList.add("hide");
+        body.classList.add("disabled");
+      }
+      cancelBtn.onclick = () => {
+        body.classList.remove("disabled");
+        navbar.classList.remove("show");
+        menuBtn.classList.remove("hide");
+      }
+      window.onscroll = () => {
+        this.scrollY > 20 ? navbar.classList.add("sticky") : navbar.classList.remove("sticky");
+      }
 
 
-    </body>
+    </script>
+    <script src="/lib/photoswipe/js/photoswipe.min.js"></script>
+    <script src="/lib/photoswipe/js/photoswipe-ui-default.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="js/app.js"></script>
+    <script src="https://unpkg.com/colcade@0/colcade.js"></script>
+    <script>
+      var colc = new Colcade('.grid', {
+        columns: '.grid-col',
+        items: '.grid-item'
+      });
+
+      AOS.init();
+    </script>
+
+
+
+
+
+  </body>
 
 </html>
