--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="/lib/photoswipe/css/photoswipe.css">
     <link rel="stylesheet" href="/lib/default-skin/default-skin.css">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/node_modules/lightgallery.js/dist/css/lightgallery.css">
     <title>Empire</title>
 </head>
 
@@ -28,23 +29,42 @@
         <nav class="navigation">
             <div class="content">
                 <div class="logo">
-                    <a href="index.html"><img src="img/empire_logo.png" class="img-thumbnail empire-logo"></a>
+                    <a href="index.html"><img src="img/empire_logo white.svg" class="empire-logo" alt="Logo"></a>
+
                 </div>
                 <ul class="menu-list">
                     <div class="icon cancel-btn">
                         <i class="fas fa-times"></i>
                     </div>
-                    <li><a href="Portfolio.html">Portfolio</a></li>
-                    <li><a href="aboutus.html">About us</a></li>
-                    <li><a href="contactus.html">Contact us</a></li>
-                    <li class="social"><a href="#"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="index.html" class="underline active">Home</a></li>
+                    <li><a href="Portfolio.html" class="underline">Portfolio</a></li>
+                    <li><a href="aboutus.html" class="underline">About us</a></li>
+                    <li><a href="contactus.html" class="underline">Contact us</a></li>
+                    <li class="social"><a href="https://www.instagram.com/empire_bc246/"><i
+                                class="fab fa-instagram"></i></a></li>
+                    <li class="social"><a href="https://www.facebook.com/empirebuildingandcontruction246"><i
+                                class="fab fa-facebook-square"></i></a></li>
                 </ul>
                 <div class="icon menu-btn">
                     <i class="fas fa-bars"></i>
                 </div>
             </div>
         </nav>
-        <div class="banner"></div>
+        <div class="banner">
+            <div class="container">
+                <div class="col-sm-6">
+                    <div class=".big-text" data-aos="fade-right" data-aos-delay="400">
+                        <p class="company-name">Empire building & construction</p>
+                        <h1 class="hero-title">superior community living of the highest standard</h1>
+                        <hr class="line">
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
         <section class="our-projects">
             <div class="container-fluid">
                 <div class="row">
@@ -52,13 +72,13 @@
                         <div id="project-pics" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active" data-interval="2000">
-                                    <img src="/img/pic1.jpg" class="d-block w-100 rounded" alt="pic1">
+                                    <img src="/img/proj1.jpg" class="d-block w-100 rounded proj-img" alt="pic1">
                                 </div>
                                 <div class="carousel-item" data-interval="2000">
-                                    <img src="/img/pic2.jpg" class="d-block w-100 rounded" alt="pic2">
+                                    <img src="/img/proj2.jpg" class="d-block w-100 rounded proj-img" alt="pic2">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="/img/pic3.jpg" class="d-block w-100 rounded" alt="pic3">
+                                    <img src="/img/proj3.jpg" class="d-block w-100 rounded proj-img" alt="pic3">
                                 </div>
                             </div>
                         </div>
@@ -66,9 +86,7 @@
                     <div class="col-lg-5">
                         <div class="title align-self-center" data-aos="fade-up" data-aos-offset="300">
                             <h1>Come check out our projects!</h1>
-                            <p>Click here to check out all of our projects!</p>
-                            <a href="#" class="btn"><i
-                                    class="fas fa-angle-double-right hvr-icon-wobble-horizontal"></i></a>
+                            <a type="button" href="Portfolio.html" class="hvr-bob cta">View our projects</a>
                         </div>
                     </div>
                 </div>
@@ -76,93 +94,47 @@
         </section>
         <section class="gallery">
             <div class="gallery-title d-flex flex-column align-items-center">
-                <h1>Gallery</h1>
+                <h1 class="mt-4 mb-4">Gallery</h1>
 
             </div>
             <div class="container">
-                <div class="grid my-gallery" itemscope itemtype="http://schema.org/ImageGallery" data-aos="fade-up"
-                    data-aos-offset="300" data-aos-delay="50" data-aos-easing="ease-in-out">
-                    <div class="grid-col grid-col--1">
-
-                    </div>
-                    <div class="grid-col grid-col--2">
-
-                    </div>
-                    <div class="grid-col grid-col--3">
-
-                    </div>
-
-                    <div class="grid-item">
-                        <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                            <a href="img/pic1.jpg" itemprop="contentUrl" data-size="964x1024">
-                                <img src="img/pic1.jpg" itemprop="thumbnail" alt="Image description" />
-                            </a>
-                        </figure>
-                    </div>
-                    <div class="grid-item">
-                        <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                            <a href="img/pic2.jpg" itemprop="contentUrl" data-size="964x1024">
-                                <img src="img/pic2.jpg" itemprop="thumbnail" alt="Image description" />
-                            </a>
-                        </figure>
-                    </div>
-                    <div class="grid-item">
-                        <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                            <a href="img/pic3.jpg" itemprop="contentUrl" data-size="964x1024">
-                                <img src="img/pic3.jpg" itemprop="thumbnail" alt="Image description" />
-                            </a>
-                        </figure>
-                    </div>
-                    <div class="grid-item">
-                        <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                            <a href="img/pic4.jpg" itemprop="contentUrl" data-size="964x1024">
-                                <img src="img/pic4.jpg" itemprop="thumbnail" alt="Image description" />
-                            </a>
-                        </figure>
-                    </div>
-                    <div class="grid-item">
-                        <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                            <a href="img/pic5.jpg" itemprop="contentUrl" data-size="964x1024">
-                                <img src="img/pic5.jpg" itemprop="thumbnail" alt="Image description" />
-                            </a>
-                        </figure>
-                    </div>
-                    <div class="grid-item">
-                        <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                            <a href="img/pic6.jpg" itemprop="contentUrl" data-size="964x1024">
-                                <img src="img/pic6.jpg" itemprop="thumbnail" alt="Image description" />
-                            </a>
-                        </figure>
-                    </div>
-                    <div class="grid-item">
-                        <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                            <a href="img/pic7.jpg" itemprop="contentUrl" data-size="964x1024">
-                                <img src="img/pic7.jpg" itemprop="thumbnail" alt="Image description" />
-                            </a>
-                        </figure>
-                    </div>
-                    <div class="grid-item">
-                        <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                            <a href="img/pic8.jpg" itemprop="contentUrl" data-size="964x1024">
-                                <img src="img/pic8.jpg" itemprop="thumbnail" alt="Image description" />
-                            </a>
-                        </figure>
-                    </div>
-                    <div class="grid-item">
-                        <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                            <a href="img/pic9.jpg" itemprop="contentUrl" data-size="964x1024">
-                                <img src="img/pic9.jpg" itemprop="thumbnail" alt="Image description" />
-                            </a>
-                        </figure>
-                    </div>
-                    <div class="grid-item">
-                        <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                            <a href="img/pic10.jpg" itemprop="contentUrl" data-size="964x1024">
-                                <img src="img/pic10.jpg" itemprop="thumbnail" alt="Image description" />
-                            </a>
-                        </figure>
-                    </div>
-
+                <div id="gallery" class="mt-4" data-aos="fade-up" data-aos-offset="300">
+                    <a href="img/img1.jpg">
+                        <img src="img/img1.jpg" />
+                    </a>
+                    <a href="img/img2.jpg">
+                        <img src="img/img2.jpg" />
+                    </a>
+                    <a href="img/img3.jpg">
+                        <img src="img/img3.jpg" />
+                    </a>
+                    <a href="img/img4.jpg">
+                        <img src="img/img4.jpg" />
+                    </a>
+                    <a href="img/img5.jpg">
+                        <img src="img/img5.jpg" />
+                    </a>
+                    <a href="img/img6.jpg">
+                        <img src="img/img6.jpg" />
+                    </a>
+                    <a href="img/img7.jpg">
+                        <img src="img/img7.jpg" />
+                    </a>
+                    <a href="img/img8.jpg">
+                        <img src="img/img8.jpg" />
+                    </a>
+                    <a href="img/img9.jpg">
+                        <img src="img/img9.jpg" />
+                    </a>
+                    <a href="img/img10.jpg">
+                        <img src="img/img10.jpg" />
+                    </a>
+                    <a href="img/img11.jpg">
+                        <img src="img/img11.jpg" />
+                    </a>
+                    <a href="img/img12.jpg">
+                        <img src="img/img12.jpg" />
+                    </a>
                 </div>
             </div>
 
@@ -170,100 +142,43 @@
 
 
 
-            <!-- Root element of PhotoSwipe. Must have class pswp. -->
-            <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
 
-                <!-- Background of PhotoSwipe. 
-                       It's a separate element, as animating opacity is faster than rgba(). -->
-                <div class="pswp__bg"></div>
-
-                <!-- Slides wrapper with overflow:hidden. -->
-                <div class="pswp__scroll-wrap">
-
-                    <!-- Container that holds slides. PhotoSwipe keeps only 3 slides in DOM to save memory. -->
-                    <!-- don't modify these 3 pswp__item elements, data is added later on. -->
-                    <div class="pswp__container">
-                        <div class="pswp__item"></div>
-                        <div class="pswp__item"></div>
-                        <div class="pswp__item"></div>
-                    </div>
-
-                    <!-- Default (PhotoSwipeUI_Default) interface on top of sliding area. Can be changed. -->
-                    <div class="pswp__ui pswp__ui--hidden">
-
-                        <div class="pswp__top-bar">
-
-                            <!--  Controls are self-explanatory. Order can be changed. -->
-
-                            <div class="pswp__counter"></div>
-
-                            <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
-
-                            <button class="pswp__button pswp__button--share" title="Share"></button>
-
-                            <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
-
-                            <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
-
-                            <!-- element will get class pswp__preloader--active when preloader is running -->
-                            <div class="pswp__preloader">
-                                <div class="pswp__preloader__icn">
-                                    <div class="pswp__preloader__cut">
-                                        <div class="pswp__preloader__donut"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
-                            <div class="pswp__share-tooltip"></div>
-                        </div>
-
-                        <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
-                        </button>
-
-                        <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
-                        </button>
-
-                        <div class="pswp__caption">
-                            <div class="pswp__caption__center"></div>
-                        </div>
-
-                    </div>
-
-                </div>
-
-            </div>
 
 
         </section>
 
         <div class="footer">
             <div class="container">
-                <div class="row">                    
+                <div class="row">
                     <div class="col-4">
-                        <h3>Menu</h3>
+                        <h3 class="mb-4" style="text-decoration: underline;">Menu</h3>
                         <ul class="footer-links">
-                            <li><a href="portfolio.html">Portfolio</a></li>
-                            <li><a href="aboutus.html">About us</a></li>
-                            <li><a href="contactus.html">Contact us</a></li>
+                            <li><a href="portfolio.html" class="underline">Portfolio</a></li>
+                            <li><a href="aboutus.html" class="underline">About us</a></li>
+                            <li><a href="contactus.html" class="underline">Contact us</a></li>
                         </ul>
                     </div>
                     <div class="col-4">
-                        <h3>Contact us</h3>
+                        <h3 class="mb-4" style="text-decoration: underline;">Contact us</h3>
                         <ul class="footer-links">
-                            <li><i class="fas fa-at"></i> email_address@email.com</li>
-                            <li><i class="fas fa-phone-volume"></i> 1(246) 124-9876</li>
-                            <li><a href="#"><i class="fab fa-instagram"></i></a> <a href="#"><i
-                                        class="fab fa-facebook-square"></i></a></li>
+                            <li>Empirebuildingconstruction@gmail.com</li>
+                            <li>1(246)264-1419 </li>
+                            <div class="footer-social">
+                                <li><a href="https://www.instagram.com/empire_bc246/"><i
+                                            class="fab fa-instagram"></i></a></li>
+                                <li><a href="https://www.facebook.com/empirebuildingandcontruction246"><i
+                                            class="fab fa-facebook-square"></i></a></li>
+                            </div>
+
                         </ul>
                     </div>
                     <div class="col-4">
-                        <img src="img/empire_logo white.svg" class="footer-icon mt-auto p-2 bd-highlight" alt="">
+                        <img src="img/empire_logo white.svg" class="footer-icon float-right" alt="">
                     </div>
                 </div>
             </div>
         </div>
+
 
 
         <div class="intro">
@@ -319,20 +234,27 @@
 
 
         </script>
-        <script src="/lib/photoswipe/js/photoswipe.min.js"></script>
-        <script src="/lib/photoswipe/js/photoswipe-ui-default.min.js"></script>
+
         <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
         <script src="/node_modules/aos/dist/aos.js"></script>
         <script src="js/app.js"></script>
-        <script src="https://unpkg.com/colcade@0/colcade.js"></script>
-        <script>
-            var colc = new Colcade('.grid', {
-                columns: '.grid-col',
-                items: '.grid-item'
+        <script src="node_modules/lightgallery.js/dist/js/lightgallery.js"></script>
+        <script src="node_modules/lightgallery.js/lib/js/"></script>
+        <script src="node_modules/lg-thumbnail.js/dist/lg-thumbnail.js"></script>
+
+
+
+
+        <script type="text/javascript">
+
+
+            lightGallery(document.getElementById('gallery'), {
+                thumbnail: true
             });
 
-            // AOS.init();
+
         </script>
+
 
 
 
